--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,2 @@
 language:node_js
-node_js:
-   -"6"
-install:
-  - "npm install"
-  - "npm install -g codecov"
-scripts:  
-  - "npm run cover"
-  - "codecov"
+script: true
