--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,10 @@
 language:node_js
-script: true
+node_js:
+   -"6"
+   -"8"
+install:
+  - "npm install"
+  - "npm install -g codecov"
+scripts:  
+  - "npm run cover"
+  - "codecov"
