--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "mocha": "mocha test/simple.js",
-    "cover":"istanbul cover node_modules/mocha/bin/_mocha test/simple.js"
- 
+    "cover": "istanbul cover node_modules/mocha/bin/_mocha test/simple.js"
   },
   "repository": {
     "type": "git",
@@ -23,6 +22,7 @@
   "devDependencies": {
     "chai": "^4.1.2",
     "istanbul": "^0.4.5",
-    "mocha": "^5.2.0"
+    "mocha": "^5.2.0",
+    "travis": "^0.1.1"
   }
 }
